objects/Contigency__c.object
<CustomObject>
    <fields>
        <fullName>Expiry_date__c</fullName>
        <label>Expiry date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Met_date__c</fullName>
        <label>Met date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Newstar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Newstar ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newstar_Sync_Status__c</fullName>
        <label>Newstar Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Contigencies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home to Sell</fullName>
                </value>
                <value>
                    <fullName>Home to Lease</fullName>
                </value>
                <value>
                    <fullName>Home to Close</fullName>
                </value>
                <value>
                    <fullName>Financing Contingency</fullName>
                </value>
                <value>
                    <fullName>Lawyer Approval</fullName>
                </value>
                <value>
                    <fullName>SiteUnseen Contingency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contingency</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contingencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>